@@ -1,0 +1,27 @@
+# First, a comment block for the deafult conf:
+
+#  TAG: buffered_logs   on|off
+#       cache.log log file is written with stdio functions, and as such
+#       it can be buffered or unbuffered. By default it will be unbuffered.
+#       Buffering it can speed up the writing slightly (though you are
+#       unlikely to need to worry unless you run with tons of debugging
+#       enabled in which case performance will suffer badly anyway..).
+#
+#Default:
+# buffered_logs off
+
+# Now, a slightly useful (but in no way complete) set of options:
+
+cache_peer upstream1.example.com parent 8080 0 no-query proxy-only round-robin
+cache_peer upstream2.example.com parent 3128 0 no-query proxy-only round-robin
+never_direct allow all
+never_direct allow CONNECT
+
+acl myclients src 127.0.0.1
+http_access allow myclients
+
+acl mynet src 192.168.0.0/255.255.0.0
+no_cache deny mynet
+
+acl mynetlocal dst 192.168.0.0/255.255.0.0
+always_direct allow mynetlocal
